Sanitized password fields

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ port=8089
 username=admin
 
 # Splunk password
-password=Helloween90()
+password=<password>
 
 # Access scheme (default: https)
 scheme=https
